# ros_odrive

cabot_odrive_can/: CMakeLists.txt  package.xml  readme.md
cabot_odrive_can/include/: odrive_can_gain_setter.hpp
cabot_odrive_can/json/v0_6_10/: flat_endpoints_pro.json
cabot_odrive_can/launch/: odrive_can_gain_setter.launch.py
cabot_odrive_can/src/: main.cpp  main_odrive_can_gain_setter.cpp  odrive_can_gain_setter.cpp  odrive_can_node.cpp
odrive_node/: CMakeLists.txt
odrive_node/include/: arbitrary_parameter.hpp  demangle.hpp  odrive_can_node.hpp
odrive_node/json/v0_6_9-1/: flat_endpoints_s1.json
odrive_node/launch/: cabot.launch.py  watchdog.launch.py
odrive_node/src/: arbitrary_parameter.cpp  demangle.cpp  odrive_can_node.cpp
